# test-mlserver

./: .gitignore  README.md
benchmarking/load-tests/scenarios/k6/: grpc_base64.js  grpc_df.js  rest.js  rest_base64.js
benchmarking/load-tests/scenarios/k6/data/: base64-data.json  data.json  grpc-base64-data.json  grpc-data.json
benchmarking/load-tests/scenarios/k6/proto/: README.md  dataplane.proto
code/: pyproject.toml
code/ml_models/: log_config.ini  model-settings.json  settings.json
code/scoringsample/: __init__.py  __main__.py  helloworld_example.py
code/tests/: test_mlserver_helloworld.py
